<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="1dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:id="@+id/item_lista">


    <LinearLayout
        android:id="@+id/linea"
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#49000000"/>


<RelativeLayout
    android:padding="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/angel"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:text="@string/an_gel"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/corre"
        android:layout_marginTop="5dp"
        android:layout_below="@id/angel"
        android:text="@string/co_rreo"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tele"
        android:layout_marginTop="5dp"
        android:layout_below="@id/corre"
        android:textSize="18sp"
        android:text="@string/ingre_tele"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    



</RelativeLayout>

</androidx.cardview.widget.CardView>